# bounded-registers

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.org
proof/: Bounded.lagda  build
proof/latex/: agdon.sty
src/: bounds.rs  lib.rs  macros.rs  read_only.rs  read_write.rs  register.rs
tests/: examples.rs  registers.rs
