[package]
name = "bounded-registers"
version = "0.1.0"
authors = ["Dan Pittman <dan@auxon.io>"]
edition = "2018"
readme = "Readme.org"
description = "A high-assurance memory-mapped register interaction library"
repository = "https://github.com/auxoncorp/bounded-registers"
license-file = "LICENSE"

[dependencies]
typenum = "1.10"
