[package]
name = "bounded-registers"
version = "0.1.1"
authors = ["Dan Pittman <dan@auxon.io>"]
edition = "2018"
readme = "README.md"
description = "A high-assurance memory-mapped register interaction library"
repository = "https://github.com/auxoncorp/bounded-registers"
license-file = "LICENSE"

[dependencies]
typenum = "1.10"
